--- a/ruirui/css/index.css
+++ b/ruirui/css/index.css
@@ -23,7 +23,11 @@ html{
 	position:relative;
 }
 .tu{
+	position:absolute;
+	left:0;
+	top:0;
 	width:100%;
+	height:4.10rem;
 }
 .tu img{
 	width:100%;
@@ -37,8 +41,8 @@ html{
 	padding-right:3%;
 	padding-top:0.10rem;
 	position:absolute;
-	bottom:0;
 	left:0;
+	top:4.10rem;
 }
 .xinxi p{
 	text-indent: 0.02rem;
@@ -47,3 +51,64 @@ html{
 	line-height:0.2rem;
 	height:0.20rem;
 	}
+#audio_btn {
+	display: flex;
+	position: absolute;
+	right: 0.20rem;
+	top: 0.20rem;
+	z-index: 200;
+	width: 0.30rem;
+	height: 0.30rem;
+	}
+#audio_btn .audio_btn{
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	-webkit-animation: move 1.2s linear infinite;
+	-moz-animation: move 1.2s linear infinite;
+	-ms-animation: move 1.2s linear infinite;
+}
+#audio_btn img {
+	width: 100%;
+	height: 100%;
+}
+
+@-webkit-keyframes move {
+	from {
+		-webkit-transform: rotateZ(0deg);
+		-moz-transform: rotateZ(0deg);
+		-ms-transform: rotateZ(0deg);
+		
+	}
+	to {
+		-webkit-transform: rotateZ(360deg);
+		-moz-transform: rotateZ(360deg);
+		-ms-transform: rotateZ(360deg);	
+	}
+}
+@-ms-keyframes move {
+	from {
+		-webkit-transform: rotateZ(0deg);
+		-moz-transform: rotateZ(0deg);
+		-ms-transform: rotateZ(0deg);
+		
+	}
+	to {
+		-webkit-transform: rotateZ(360deg);
+		-moz-transform: rotateZ(360deg);
+		-ms-transform: rotateZ(360deg);	
+	}
+}
+@-moz-keyframes move{
+	from {
+		-webkit-transform: rotateZ(0deg);
+		-moz-transform: rotateZ(0deg);
+		-ms-transform: rotateZ(0deg);
+		
+	}
+	to {
+		-webkit-transform: rotateZ(360deg);
+		-moz-transform: rotateZ(360deg);
+		-ms-transform: rotateZ(360deg);	
+	}
+}
